--- a/starter/deployment.yaml
+++ b/starter/deployment.yaml
@@ -13,19 +13,20 @@ spec:
         app: nextjs
     spec:
       containers:
-      - name: nextjs-container
-        image: nextjs-docker-starter:latest
-        ports:
-        - containerPort: 3000
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 3000
-          initialDelaySeconds: 10
-          periodSeconds: 5
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 3000
-          initialDelaySeconds: 15
-          periodSeconds: 10
+        - name: nextjs-container
+          image: nextjs-local:latest
+          imagePullPolicy: Never
+          ports:
+            - containerPort: 3000
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 3000
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 3000
+            initialDelaySeconds: 15
+            periodSeconds: 10
